# congen-ai

./: .env.local  Dockerfile  Index.html  README.md  ai_main_csv.py  bash.sh  config.toml  gui.py  kubu-hai.yml  mailtranslator.py  mkdocs.yml  pyproject.toml  render.yaml  requirements.txt  setup.cfg  test_gui.py  test_gui_upload.py
.github/workflows/: ci.yml
.streamlit/: config.toml
Docs/: congen-ai.py  deploy.md  intro.md  perl  usage.md
congen_ai/: __init__.py  ai_main_csv.py
test/: test_gui.py  test_train.py
