[metadata]
name = congen-ai
version = 0.1.0
description = Train Bagging and Stacking models from CSV
author = Web4application
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pandas
    scikit-learn
    joblib
    matplotlib
    streamlit
python_requires = >=3.8
